--- a/assessment-front-end-web/styles.css
+++ b/assessment-front-end-web/styles.css
@@ -36,3 +36,15 @@ input {
 img {
 	max-width: 300px;
 }
+
+.btn{
+	background-color: goldenrod;
+	color: black;
+	height: 50px;
+	width: 100px;
+	font-size: medium;
+	display: flex;
+	flex-direction: column;
+	margin: 25px;
+
+}
